3.0 emprestimos funcional